Release 2.3.0 2011-09-xx
------------------------

 - TODO