@@ -15,3 +15,9 @@ Manual
   
 Issue Tracking
   http://forge.switch.ch/redmine/projects/uapprove
+  
+Source Access (Subversion)
+  https://subversion.switch.ch/svn/general/aai/uApprove/
+
+Comments & Questions
+  aai@switch.ch
