@@ -30,10 +30,10 @@ view.forceDefaultLocale     = false
 # Database configuration                                              #
 #---------------------------------------------------------------------#
 
-database.driver             = org.hsqldb.jdbcDriver
-database.url                = jdbc:hsqldb:mem:uApprove
-database.username           = SA
-database.password           = 
+database.driver             = com.mysql.jdbc.Driver
+database.url                = jdbc:mysql://localhost:3306/uApprove
+database.username           = uApprove
+database.password           = uApprove
 
 #######################################################################
 ### Terms of Use configuration                                      ###
